<resources>

    <string name="app_name">Globus Transfer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Globus Transfer</string>
	   <string name="globus_logo_content_description">The Globus Online Logo</string>
	   <string name="login_notice_initial_text">Please log in to continue:</string>
		   	<string name="login_attempting_login">Attempting to log in&#8230;</string>
		   	<string name="login_notice_no_username_and_password">Both the Username and Password fields were not filled in.</string>
		   	<string name="login_notice_no_username">The Username field was not filled in.</string>
		   	<string name="login_notice_no_password">The Password field was not filled in.</string>
		   	<string name="login_notice_failure">Invalid username or password.</string>
		   	<string name="login_notice_success">You logged in successfully.</string>
	   <string name="login_globus_online_username_hint">GO Account Username</string>
	   <string name="login_globus_online_password_hint">Password</string>
	   <string name="login_button_text">Log in</string>
	   
	<string name="title_welcome">Globus Transfer</string>
    
    <string name="title_activity_home">Dashboard Home</string>
    	<string name="home_welcome_username">Welcome: </string>
    	<string name="home_task_summary_title">Task Summary:</string>
    		<string name="home_task_summary_loading">Loading task summary&#8230;</string>
    		<string name="home_task_summary_load_fail">Failed to load task summary.</string>
    		<!-- task summary labels -->
    			<string name="home_task_summary_active_label">Active</string>
    			<string name="home_task_summary_inactive_label">Inactive</string>
    			<string name="home_task_summary_succeeded_label">Succeeded </string>
    			<string name="home_task_summary_failed_label">Failed</string>
    
    <string name="title_activity_manage_transfers">Manage Transfers</string>
   		<string name="manage_transfers_loading">Loading transfers&#8230;</string>
   		<string name="manage_transfers_load_fail">Failed to load transfers.</string>
	    	<string name="manage_transfers_task_status_icon_placeholder">The current status of this task</string>
	    	<string name="manage_transfers_task_title_placeholder">The Task Title</string>
	    		<string name="manage_transfers_click_to_add_label">&lt;click to add label&gt;</string>
	    	<string name="manage_transfers_task_id_placeholder">/*insert task id*/</string>
	    	<string name="manage_transfers_task_transfer_progress_status_text_placeholder">Task Progress Details</string>
	    		<string name="manage_transfers_task_file_count_single">file transfered</string>
	    		<string name="manage_transfers_task_file_count_multiple">files transfered</string>
	    		<string name="manage_transfers_task_single_file_checked">file checked</string>
	    		<string name="manage_transfers_task_multiple_files_checked">files checked</string>
	    		<string name="manage_transfers_task_no_files_updated">No files were updated</string>
	    		<string name="manage_transfers_task_single_file_updated">file was updated</string>
	    		<string name="manage_transfers_task_multiple_files_updated">files were updated</string>
	    		<string name="manage_transfers_task_deleted_single_file">file was deleted</string>
	    		<string name="manage_transfers_task_deleted_multiple_files">files were deleted</string>
	    		<string name="manage_transfers_task_transfer">Transfer</string>
	    		<string name="manage_transfers_task_delete">Delete</string>
	    		<string name="manage_transfers_task_in_progress">in progress</string>
	    		<string name="manage_transfers_task_failed">failed</string>
	    		<string name="manage_transfers_task_cancelled">cancelled</string>
	    		<string name="manage_transfers_task_creds_expiring_soon">credentials expiring soon</string>
	    		<string name="manage_transfers_task_creds_expired">user credential expired</string>
	    		<string name="manage_transfers_task_queued">Task queued</string>
	    	<string name="manage_transfers_task_transfer_route_placeholder">Transfer Route "to and from"</string>
	    		<string name="manage_transfers_task_on">on</string>
	    		<string name="manage_transfers_task_from">from</string>
	    	<string name="manage_transfers_load_more_failed">Failed to load more transfers</string>
	
	<!-- task details -->
		<string name="task_details_status_label">Status</string>
		<string name="task_details_status_value_placeholder">/*insert task status here*/</string>
		<string name="task_details_start_label">Start</string>
		<string name="task_details_start_value_placeholder">/*insert task start here*/</string>
		<string name="task_details_end_label">End</string>
		<string name="task_details_end_value_placeholder">/*insert task end here*/</string>
		<string name="task_details_origin_label">Origin</string>
		<string name="task_details_origin_value_placeholder">/*insert task origin here*/</string>
		<string name="task_details_dest_label">Dest.</string>
		<string name="task_details_dest_value_placeholder">/*insert task destination here*/</string>
		<string name="task_details_bytes_label">Bytes</string>
		<string name="task_details_bytes_value_placeholder">/*insert bytes here*/</string>
		<string name="task_details_files_label">Files</string>
		<string name="task_details_files_value_placeholder">/*insert files here*/</string>
		<string name="task_details_task_not_complete">Task is not yet complete</string>
		<string name="task_details_task_label_update_failed">Updating the task label failed</string>
		<string name="task_details_task_label_updated">Task label updated to</string>
        <string name="task_details_task_label_update__dialog_wait">Updating Label&#8230;</string>
		<string name="task_details_task_label_cleared">Task label cleared</string>
		<string name="task_details_cancel_task"><u>cancel task</u></string>
		<string name="task_details_cancel_task_title">Cancel Task</string>
		<string name="task_details_cancel_task_dialog">Are you sure you want to cancel this task?</string>
		<string name="task_details_cancel_task_successful">Task canceled successfully</string>
		<string name="task_details_cancel_task_failed_due_to_task_complete">This task has already completed</string>
		<string name="task_details_cancel_failed">Task cancel failed</string>
		<string name="task_details_cancel_task_dialog_wait">Canceling&#8230;</string>
    	
    <string name="title_activity_start_transfer">Start Transfer</string>
    	<string name="start_transfer_title">Coming Soon</string>
    
    
    <string name="no_connectivity">Failed to connect to Globus Online.</string>
    <string name="api_result_error">The call to the API failed.</string>
    <string name="close_button_text">CLOSE</string>
    <string name="save_and_close_button_text">SAVE &amp; CLOSE</string>
    <string name="not_available_text"> - </string>
    <string name="task_refreshing_dialog">Refreshing view</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>