<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:layout_width="wrap_content"
    android:padding="25dp" >
    
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" >
        
        <EditText 
            android:id="@+id/task_details_title"
            android:hint="@string/manage_transfers_click_to_add_label"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:textSize="20dp" />
        
        <TextView
            android:id="@+id/task_details_task_id"
            android:gravity="center"
            android:layout_below="@id/task_details_title"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:text="@string/manage_transfers_task_id_placeholder"
            android:textColor="@color/light"
            android:textSize="10dp" />
        
        <TextView
            android:id="@+id/task_details_status_label"
            android:layout_alignLeft="@id/task_details_task_id"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_task_id"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:text="@string/task_details_status_label"
            android:gravity="right" />
        
        <TextView
            android:id="@+id/task_details_status_value"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/task_details_status_label"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@id/task_details_status_label"
            android:layout_width="wrap_content"
            android:text="@string/task_details_status_value_placeholder"
            android:textColor="@color/light"
            android:textStyle="italic" />
        
        <TextView
            android:id="@+id/task_details_start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_status_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_status_label"
            android:text="@string/task_details_start_label" />
        
        <TextView
            android:id="@+id/task_details_start_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_status_value"
            android:layout_alignLeft="@id/task_details_status_value"
            android:layout_marginBottom="7dp"
            android:textStyle="italic"
            android:text="@string/task_details_start_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_start_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_start_label"
            android:text="@string/task_details_end_label" />
        
        <TextView
            android:id="@+id/task_details_end_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_start_value"
            android:layout_alignLeft="@id/task_details_start_value"
            android:layout_marginBottom="7dp"
            android:textStyle="italic"
            android:text="@string/task_details_end_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_origin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_end_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_end_label"
            android:text="@string/task_details_origin_label" />
        
        <TextView
            android:id="@+id/task_details_origin_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_end_value"
            android:layout_alignLeft="@id/task_details_end_value"
            android:layout_marginBottom="7dp"
            android:textStyle="italic"
            android:text="@string/task_details_origin_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_dest_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_origin_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_origin_label"
            android:text="@string/task_details_dest_label" />
        
        <TextView
            android:id="@+id/task_details_dest_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_origin_value"
            android:layout_alignLeft="@id/task_details_end_value"
            android:layout_marginBottom="7dp"
            android:textStyle="italic"
            android:text="@string/task_details_dest_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_bytes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_dest_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_dest_label"
            android:text="@string/task_details_bytes_label" />
        
        <TextView
            android:id="@+id/task_details_bytes_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_dest_value"
            android:layout_alignLeft="@id/task_details_dest_value"
            android:layout_marginBottom="7dp"
            android:textStyle="italic"
            android:text="@string/task_details_bytes_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_files_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_details_bytes_value"
            android:gravity="right"
            android:layout_alignRight="@id/task_details_bytes_label"
            android:text="@string/task_details_files_label" />
        
        <TextView
            android:id="@+id/task_details_files_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/task_details_bytes_value"
            android:layout_alignLeft="@id/task_details_bytes_value"
            android:layout_marginBottom="10dp"
            android:textStyle="italic"
            android:text="@string/task_details_files_value_placeholder"
            android:textColor="@color/light" />
        
        <TextView
            android:id="@+id/task_details_cancel_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
	        android:gravity="center"
            android:layout_below="@id/task_details_files_value"
            android:layout_marginBottom="10dp"
            android:text="@string/task_details_cancel_task"
            android:textColor="@color/error_color" />
        
        <Button
            android:id="@+id/task_details_ok_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@id/task_details_cancel_task"
	        android:text="@string/close_button_text"
	        android:textSize="12dp" />
            
    </RelativeLayout>
    
</ScrollView>